--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "deploy": "gh-pages -d dist"
+{
+  "name": "babi-volley",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
+  }
 }
-
-
-
